# OOP_indie_studio_2019

./: .gitignore  CMakeLists.txt  playbook.yml  readme.md
assets/bomberguy/: dance.b3d  idle.b3d  running.b3d  walking.b3d
assets/polnareff/: running.b3d  walking.b3d
assets/shrek/: idle.b3d  running.b3d
cmake/Irrlicht/: FindIrrlicht.cmake
cmake/Irrlicht/include/: ICameraSceneNode.h  IFileSystem.h  IGUITreeView.h  ISceneCollisionManager.h  ISceneManager.h  IVideoDriver.h  IrrCompileConfig.h  SColor.h  heapsort.h  irrAllocator.h
cmake/SFML/lib/cmake/SFML/: SFMLConfig.cmake
config/: mainConfig.json
docs/site/: index.html
docs/site/indie_studio_doc/dev/: index.html  usage.html
docs/site/indie_studio_doc/dev/credits/: credits.html
docs/site/indie_studio_doc/dev/game/: bonus.html  game.html  rules.html
docs/site/indie_studio_doc/dev/libraries/: SFML.html  irrlicht.html  libraries.html
docs/site/indie_studio_doc/dev/system/: AI.html  architecture.html  ecs.html  keybinds.html
include/: Game.hpp  json_parser.h
include/ECS/: ActionSystem.hpp  CollectibleSystem.hpp  CollisionSystem.hpp  Components.hpp  ECSEntity.hpp  EffectSystem.hpp  EndGameSystem.hpp  ExplosiveSystem.hpp  IASystem.hpp  InputSystem.hpp  Instance.hpp  MapSystem.hpp  MovementSystem.hpp  Storage.hpp  TimerSystem.hpp
include/config/: Config.hpp  GameConfig.hpp  IdGen.hpp  JsonData.hpp  JsonParser.hpp
include/events/: EventManager.hpp  IEventManager.hpp
include/scenes/: AScene.hpp  IScene.hpp  SceneEnd.hpp  SceneGame.hpp  SceneIndex.hpp  SceneMapSelection.hpp  SceneMenu.hpp  SceneOption.hpp  ScenePlayerSelection.hpp
include/visual/: AMesh.hpp  AnimatedMesh.hpp  Camera.hpp  Gui.hpp  IGUI.hpp  IMesh.hpp  Mesh.hpp  Particle.hpp  VisualManager.hpp
libs/json_parser/include/: json_parser.h  json_parser_reader.h  json_parser_writer.h
libs/json_parser/src/deleter/: delete_json_object.c
libs/json_parser/src/reader/: array_parser.c  chained_list.c  data.c  data_getter.c  line_parser.c  object_parser.c  parser.c
libs/json_parser/src/writer/: write_array.c  write_data.c  write_object.c  writer.c
src/: Game.cpp  main.cpp
src/ECS/: ActionSystem.cpp  CollectibleSystem.cpp  CollisionSystem.cpp  ECSEntity.cpp  EffectSystem.cpp  EndGameSystem.cpp  ExplosiveSystem.cpp  IASystem.cpp  InputSystem.cpp  Instance.cpp  MapSystem.cpp  MovementSystem.cpp  TimerSystem.cpp
src/config/: Config.cpp  GameConfig.cpp  IdGen.cpp  JsonData.cpp  JsonParser.cpp
src/events/: EventManager.cpp
src/scenes/: AScene.cpp  SceneEnd.cpp  SceneGame.cpp  SceneMapSelection.cpp  SceneMenu.cpp  SceneOption.cpp  ScenePlayerSelection.cpp
src/visual/: AMesh.cpp  AnimatedMesh.cpp  Camera.cpp  Gui.cpp  Mesh.cpp  Particle.cpp  VisualManager.cpp
